force-app/main/default/objects/GYNCO_Product_Category__c/fields/GYNCF_Catalog_Master__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Catalog_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalog Master</label>
    <referenceTo>GYNCO_Catalog_Master__c</referenceTo>
    <relationshipLabel>Product Categories</relationshipLabel>
    <relationshipName>Product_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>