force-app/main/default/objects/GYNCO_Product_Category__c/fields/GYNCF_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Hierarchy__c</fullName>
    <label>Hierarchy</label>
    <length>200</length>
    <type>Text</type>
</CustomField>