force-app/main/default/objects/GYNCO_Product_Category__c/fields/GYNCF_Level__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Level__c</fullName>
    <label>Level</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>