force-app/main/default/objects/GYNCO_Product_Category__c/fields/GYNCF_Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Parent_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Category</label>
    <referenceTo>GYNCO_Product_Category__c</referenceTo>
    <relationshipLabel>Product Categories</relationshipLabel>
    <relationshipName>Product_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>